--- a/Source/CriticalPath.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Source/CriticalPath.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -63,6 +63,9 @@
                             <li class="divider"></li>
                             <li>@Html.ActionLink(EntityStrings.Employees, "Index", "Employees")</li>
                             <li>@Html.ActionLink(EntityStrings.CreateEmployee, "Create", "Employees")</li>
+                            <li class="divider"></li>
+                            <li>@Html.ActionLink(@EntityStrings.EmployeePositions, "Index", "EmployeePositions")</li>
+                            <li>@Html.ActionLink(@EntityStrings.CreateEmployeePosition, "Create", "EmployeePositions")</li>
                         </ul>
                     </li>
                 </ul>
