--- a/Source/CriticalPath.Web/Areas/Admin/Views/Users/Index.cshtml
+++ b/Source/CriticalPath.Web/Areas/Admin/Views/Users/Index.cshtml
@@ -28,7 +28,7 @@
     <tr>
         <th>@ActionStrings.Action</th>
         <th>@Html.DisplayNameFor(model => model.UserName)</th>
-        <th>@EntityStrings.FirstName</th>
+        <th>@CommonStrings.FullName</th>
         <th>@Html.DisplayNameFor(model => model.Email)</th>
         <th>@Html.DisplayNameFor(model => model.IsUserAdmin)</th>
         <th>@Html.DisplayNameFor(model => model.IsUserSupervisor)</th>
