--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Edit.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Edit.cshtml
@@ -83,6 +83,52 @@
             </div>
         </div>
 
+        @if (Model.Cancelled || Model.IsApproved)
+        {
+            <div class="form-group">
+                @Html.LabelFor(model => model.DesignerName, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+                <div class="col-lg-5 col-md-6 col-sm-7">
+                    @Html.TextBoxFor(m => m.DesignerName, new { @class = "form-control", @readonly = "readonly" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Merchandiser1Name, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+                <div class="col-lg-5 col-md-6 col-sm-7">
+                    @Html.TextBoxFor(m => m.Merchandiser1Name, new { @class = "form-control", @readonly = "readonly" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Merchandiser2Name, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+                <div class="col-lg-5 col-md-6 col-sm-7">
+                    @Html.TextBoxFor(m => m.Merchandiser2Name, new { @class = "form-control", @readonly = "readonly" })
+                </div>
+            </div>
+        }
+        else
+        {
+            <div class="form-group">
+                @Html.LabelFor(model => model.DesignerId, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+                <div class="col-lg-5 col-md-6 col-sm-7">
+                    @Html.DropDownListFor(m => m.DesignerId, null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.DesignerId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Merchandiser1Id, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+                <div class="col-lg-5 col-md-6 col-sm-7">
+                    @Html.DropDownListFor(m => m.Merchandiser1Id, null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.Merchandiser1Id, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Merchandiser2Id, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+                <div class="col-lg-5 col-md-6 col-sm-7">
+                    @Html.DropDownListFor(m => m.Merchandiser2Id, null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.Merchandiser2Id, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        }
+
         <div class="form-group">
             <label class="control-label col-lg-2 col-md-3 col-sm-3 col-xs-3">
                 <span class="checkboxText">
@@ -148,6 +194,13 @@
                 @Html.ValidationMessageFor(m => m.ShipmentHangingFolded, "", new { @class = "text-danger" })
             </div>
         </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.HangerSticker, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.EditorFor(m => m.HangerSticker, new { htmlAttributes = new { @class = "form-control", autocomplete = "off" } })
+                @Html.ValidationMessageFor(m => m.HangerSticker, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
             <label class="control-label col-lg-2 col-md-3 col-sm-3">
@@ -160,6 +213,13 @@
 
 
         <div class="form-group">
+            @Html.LabelFor(model => model.FabricComposition, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextBoxFor(m => m.FabricComposition, new { @class = "form-control", autocomplete = "off" })
+                @Html.ValidationMessageFor(m => m.FabricComposition, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
             @Html.LabelFor(model => model.Colour, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
                 @Html.TextBoxFor(m => m.Colour, new { @class = "form-control", autocomplete = "off" })
@@ -167,13 +227,34 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.FabricComposition, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            @Html.LabelFor(model => model.Print, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.TextBoxFor(m => m.FabricComposition, new { @class = "form-control", autocomplete = "off" })
-                @Html.ValidationMessageFor(m => m.FabricComposition, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(m => m.Print, new { @class = "form-control", autocomplete = "off" })
+                @Html.ValidationMessageFor(m => m.Print, "", new { @class = "text-danger" })
             </div>
         </div>
-        
+        <div class="form-group">
+            @Html.LabelFor(model => model.Labelling, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextBoxFor(m => m.Labelling, new { @class = "form-control", autocomplete = "off" })
+                @Html.ValidationMessageFor(m => m.Labelling, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.WoovenLabel, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.EditorFor(m => m.WoovenLabel, new { htmlAttributes = new { @class = "form-control", autocomplete = "off" } })
+                @Html.ValidationMessageFor(m => m.WoovenLabel, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.WashingInstructions, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextBoxFor(m => m.WashingInstructions, new { @class = "form-control", autocomplete = "off" })
+                @Html.ValidationMessageFor(m => m.WashingInstructions, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
         @Html.Partial("_AllPriceEdit", Model)
 
         <div class="form-group">
