--- a/Source/CriticalPath.Web/Views/Shared/_Layout.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_Layout.cshtml
@@ -3,6 +3,9 @@
 @{
     Layout = "~/Views/Shared/_BaseLayout.cshtml";
 }
+@section styles{
+    <link href="~/Content/fileupload.css" rel="stylesheet" />
+}
 <div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
