--- a/Source/CriticalPath.Web/Views/Products/Create.cshtml
+++ b/Source/CriticalPath.Web/Views/Products/Create.cshtml
@@ -37,6 +37,14 @@
             </div>
         </div>
 
+        <div class="form-group">
+            @Html.LabelFor(model => model.ImageUrl, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.Partial("_ImageUpload", new ImageUploadViewModel("ImageUrl", Model.ImageUrl))
+                @Html.ValidationMessageFor(m => m.ImageUrl, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
         @*
             <div class="form-group">
                 @Html.LabelFor(model => model.ImageUrl, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
@@ -55,4 +63,10 @@
 @section Scripts
 {
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/angular")
+    <script src="~/libs/jquery.fileupload.js"></script>
+    <script src="~/Scripts/App/fileUpload.js"></script>
+    <script>
+        fileUpload.imageOnly = true;
+    </script>
 }
