--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Create.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Create.cshtml
@@ -58,15 +58,29 @@
                 @Html.ValidationMessageFor(m => m.OrderDate, "", new { @class = "text-danger" })
             </div>
         </div>
-        @*
-            <div class="form-group">
-                @Html.LabelFor(model => model.DueDate, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-                <div class="col-lg-5 col-md-6 col-sm-7">
-                    @Html.EditorFor(m => m.DueDate, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(m => m.DueDate, "", new { @class = "text-danger" })
-                </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.DesignerId, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.DropDownListFor(m => m.DesignerId, null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.DesignerId, "", new { @class = "text-danger" })
             </div>
-        *@
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Merchandiser1Id, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.DropDownListFor(m => m.Merchandiser1Id, null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Merchandiser1Id, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Merchandiser2Id, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.DropDownListFor(m => m.Merchandiser2Id, null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Merchandiser2Id, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
         @if (Model.Customer != null)
         {
             <div class="form-group">
@@ -151,6 +165,13 @@
                 @Html.ValidationMessageFor(m => m.ShipmentHangingFolded, "", new { @class = "text-danger" })
             </div>
         </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.HangerSticker, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.EditorFor(m => m.HangerSticker, new { htmlAttributes = new { @class = "form-control", autocomplete = "off" } })
+                @Html.ValidationMessageFor(m => m.HangerSticker, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         @if (Model.Product == null)
         {
@@ -161,13 +182,32 @@
             @Html.HiddenFor(m => m.ProductId)
             <div class="form-group">
                 @Html.LabelFor(model => model.ProductCode, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-                <div class="col-lg-5 col-md-6 col-sm-7">
+                <div class="col-lg-4 col-md-5 col-sm-5">
                     @Html.EditorFor(m => m.ProductCode, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                     @Html.ValidationMessageFor(m => m.SupplierId, "", new { @class = "text-danger" })
                 </div>
+                @if (!string.IsNullOrEmpty(Model.Product.ImageUrl))
+                {
+                    <div class="col-xs-12 visible-xs mb5 mt5"></div>
+                    <div class="col-sm-2 col-md-1 pl0">
+                        @* TODO: make a partial view *@
+                        <label class="btn pt0 pb0 pl0 pr0" style="max-height:53px;margin-top:-5px;overflow:hidden;"
+                               onclick="showImage('@Html.Encode(Model.Product.ProductCode)', '@AppSettings.Urls.ProductImages/@Model.Product.ImageUrl', false)">
+                            <img src='@AppSettings.Urls.ThumbImages/@Model.Product.ImageUrl' alt='@Model.ProductCode' style="margin-top:-5px;width:100%" class="pull-right" />
+                        </label>
+                    </div>
+                }
             </div>
         }
 
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.FabricComposition, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextBoxFor(m => m.FabricComposition, new { @class = "form-control", autocomplete = "off" })
+                @Html.ValidationMessageFor(m => m.FabricComposition, "", new { @class = "text-danger" })
+            </div>
+        </div>
         <div class="form-group">
             @Html.LabelFor(model => model.Colour, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
@@ -176,10 +216,31 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.FabricComposition, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            @Html.LabelFor(model => model.Print, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.TextBoxFor(m => m.FabricComposition, new { @class = "form-control", autocomplete = "off" })
-                @Html.ValidationMessageFor(m => m.FabricComposition, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(m => m.Print, new { @class = "form-control", autocomplete = "off" })
+                @Html.ValidationMessageFor(m => m.Print, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Labelling, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextBoxFor(m => m.Labelling, new { @class = "form-control", autocomplete = "off" })
+                @Html.ValidationMessageFor(m => m.Labelling, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.WoovenLabel, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.EditorFor(m => m.WoovenLabel, new { htmlAttributes = new { @class = "form-control", autocomplete = "off" } })
+                @Html.ValidationMessageFor(m => m.WoovenLabel, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.WashingInstructions, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextBoxFor(m => m.WashingInstructions, new { @class = "form-control", autocomplete = "off" })
+                @Html.ValidationMessageFor(m => m.WashingInstructions, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -212,9 +273,11 @@
         @Html.Partial("_SaveButtonsPartial")
     </div>
 </form>
+@Html.Partial("_MessageBoxPartial")
 @section Scripts
 {
     @Scripts.Render("~/bundles/jqueryval")
+    @Html.Partial("_IndexScriptsPartial", "PurchaseOrders")
     <script type="text/javascript">
         $('#CustomerName').autocomplete({
             minLenght: 1,
