--- a/Source/CriticalPath.Web/Views/PurchaseOrders/PartialDetails.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/PartialDetails.cshtml
@@ -62,6 +62,25 @@
         @Html.DisplayFor(m => m.DueDate)
     </div>
 </div>
+
+<div class="row">
+    <label class="control-label col-md-2 col-sm-3 mb5">
+        @Html.DisplayNameFor(model => model.DesignerName)
+    </label>
+    <div class="col-md-10 col-sm-9 mt10">
+        @Html.DisplayFor(m => m.DesignerName)
+    </div>
+</div>
+<div class="row">
+    <label class="control-label col-md-2 col-sm-3 mb5">
+        @EntityStrings.Merchandiser
+    </label>
+    <div class="col-md-10 col-sm-9 mt10">
+        @Html.DisplayFor(m => m.Merchandiser1Name) /
+        @Html.DisplayFor(m => m.Merchandiser2Name)
+    </div>
+</div>
+
 <div class="row">
     <label class="control-label col-md-2 col-sm-3 mb5">
         @Html.DisplayNameFor(model => model.Customer)
