--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Approve.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Approve.cshtml
@@ -81,9 +81,9 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Licensor, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            @Html.LabelFor(model => model.LicensorName, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.TextBoxFor(m => m.Licensor.CompanyName, new { @class = "form-control", @readonly = "readonly" })
+                @Html.TextBoxFor(m => m.LicensorName, new { @class = "form-control", @readonly = "readonly" })
             </div>
         </div>
         <div class="form-group">
@@ -121,8 +121,15 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Product.ProductCode, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-            <div class="col-lg-5 col-md-6 col-sm-7">
+            <div class="col-lg-4 col-md-5 col-sm-5">
                 @Html.TextBoxFor(m => m.Product.ProductCode, new { @class = "form-control", @readonly = "readonly" })
+            </div>
+            <div class="col-xs-12 visible-xs mb5 mt5"></div>
+            <div class="col-sm-2 col-md-1 pl0">
+                <label class="btn pt0 pb0 pl0 pr0" style="max-height:53px;margin-top:-5px;overflow:hidden;"
+                       onclick="showImage('@Html.Encode(Model.Product.ProductCode)', '@Model.ProductImage', false)">
+                    <img src='@Model.ProductThumb' style="margin-top:-5px;width:100%" class="pull-right" />
+                </label>
             </div>
         </div>
 
@@ -229,4 +236,10 @@
             </div>
         </div>
     </div>
-                    }
+}
+@Html.Partial("_MessageBoxPartial")
+@section Scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
+    @Html.Partial("_IndexScriptsPartial", "PurchaseOrders")
+}
