--- a/Source/CriticalPath.Web/Views/Shared/_MessageBoxPartial.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_MessageBoxPartial.cshtml
@@ -2,7 +2,7 @@
 @using CriticalPath.Data
 @using CP.i8n
 <div class="modal fade" id="messageBox"> @* Message Box *@
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
